--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <string name="action_settings">Settings</string>
 
-    <string name="title_activity_splash">SplashActivity</string>
+    <string name="title_activity_splash">RST Simplified</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
