--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="title_activity_main_page">RST Simplified</string>
     <string name="title_activity_services">Our Services</string>
     <string name="search_title">Search</string>
+    <string name="title_activity_visa_services_options">Enter Details</string>
 </resources>
