--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,12 @@
     <string name="name_kin">Name of your Next-of-Kin</string>
     <string name="nric_kin">NRIC FIN No. of your Next-of-Kin</string>
     <string name="visa">Select Visa For</string>
+    <string name="usa_form_other_names">Have you ever used other names?</string>
+    <string name="usa_form_telecode">Do you have telecode that repesents your name?</string>
+    <string name="usa_form_birth_country">Place of Birth-Country region</string>
+    <string name="usa_form_birth_state">Place of Birth-State/Province</string>
+    <string name="usa_form_country">Country/Region of origin(Nationality)</string>
+    <string name="usa_form_other_coutry">Do you hold or have you held any nationality other than the one indicated above on nationality?</string>
+    <string name="usa_form_other_coutry_permanent">Are you a permanent resident of a country/region other than your country/region of origin (nationality) indicated above?</string>
 
 </resources>
