--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,9 @@
     <string name="usa_form_country">Country/Region of origin(Nationality)</string>
     <string name="usa_form_other_coutry">Do you hold or have you held any nationality other than the one indicated above on nationality?</string>
     <string name="usa_form_other_coutry_permanent">Are you a permanent resident of a country/region other than your country/region of origin (nationality) indicated above?</string>
+    <string name="usa_form_national_identification_number">National Identification Number</string>
+    <string name="usa_form_security_number">U.S. Social Security Number</string>
+    <string name="usa_form_taxpayer_number">U.S. Tax Payer ID Number</string>
+    <string name="usa_form_mailing_address">Is your Mailing Address the same as your Home Address?</string>
 
 </resources>
