--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,5 +163,10 @@
     <string name="issue_date">Issue Date</string>
     <string name="expiry_date">Expiry Date</string>
     <string name="stolen_passport">Have you ever lost a Passport or had one stolen?</string>
-
+    <string name="stolen_passport_field1">Country/Authority that issued Passport/Travel Document</string>
+    <string name="stolen_passport_field2">Explain</string>
+    <string name="other_name_surname">Other Surname Used</string>
+    <string name="other_name_given_name">Other Given Names Used</string>
+    <string name="telecode_surname">Telecode Surnames</string>
+    <string name="telecode_given_name">Telecode Given Names</string>
 </resources>
